--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "consolidate": "^0.16.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "node": "^15.0.1",
