--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d --watch",
-    "start": "nodemon server/server.js"
+    "start": "(webpack -d --watch) & nodemon server/server.js"
   },
   "repository": {
     "type": "git",
