--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "hot-shots": "^8.3.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
     "node": "^15.0.1",
